--- a/src/blocks/modules/project-sliders/project-sliders.scss
+++ b/src/blocks/modules/project-sliders/project-sliders.scss
@@ -96,8 +96,12 @@
   }
 
   .project-slider-content__img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     object-position: 0 center;
     object-fit: contain;
+    max-height: 780px;
   }
 
   .tabs__titles-wrapper {
@@ -109,7 +113,8 @@
     display: flex;
     flex-shrink: 0;
     width: auto;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
+    padding-bottom: 15px;
     margin-top: 60px;
   }
 
